logs/eea.versions.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/eea'...
Listing './lib/python3.5/site-packages/eea/versions'...
Listing './lib/python3.5/site-packages/eea/versions/browser'...
Listing './lib/python3.5/site-packages/eea/versions/browser/templates'...
Listing './lib/python3.5/site-packages/eea/versions/controlpanel'...
Listing './lib/python3.5/site-packages/eea/versions/controlpanel/template'...
Listing './lib/python3.5/site-packages/eea/versions/docs'...
Listing './lib/python3.5/site-packages/eea/versions/locales'...
Listing './lib/python3.5/site-packages/eea/versions/locales/bg'...
Listing './lib/python3.5/site-packages/eea/versions/locales/bg/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/cs'...
Listing './lib/python3.5/site-packages/eea/versions/locales/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/da'...
Listing './lib/python3.5/site-packages/eea/versions/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/de'...
Listing './lib/python3.5/site-packages/eea/versions/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/el'...
Listing './lib/python3.5/site-packages/eea/versions/locales/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/en'...
Listing './lib/python3.5/site-packages/eea/versions/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/es'...
Listing './lib/python3.5/site-packages/eea/versions/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/et'...
Listing './lib/python3.5/site-packages/eea/versions/locales/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/eu'...
Listing './lib/python3.5/site-packages/eea/versions/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/fi'...
Listing './lib/python3.5/site-packages/eea/versions/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/fr'...
Listing './lib/python3.5/site-packages/eea/versions/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/hu'...
Listing './lib/python3.5/site-packages/eea/versions/locales/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/is'...
Listing './lib/python3.5/site-packages/eea/versions/locales/is/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/it'...
Listing './lib/python3.5/site-packages/eea/versions/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/kl'...
Listing './lib/python3.5/site-packages/eea/versions/locales/kl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/lt'...
Listing './lib/python3.5/site-packages/eea/versions/locales/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/lv'...
Listing './lib/python3.5/site-packages/eea/versions/locales/lv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/mt'...
Listing './lib/python3.5/site-packages/eea/versions/locales/mt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/nl'...
Listing './lib/python3.5/site-packages/eea/versions/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/no'...
Listing './lib/python3.5/site-packages/eea/versions/locales/no/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pl'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pt'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pt_BR'...
Listing './lib/python3.5/site-packages/eea/versions/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/ro'...
Listing './lib/python3.5/site-packages/eea/versions/locales/ro/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/ru'...
Listing './lib/python3.5/site-packages/eea/versions/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sk'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sl'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sv'...
Listing './lib/python3.5/site-packages/eea/versions/locales/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/tr'...
Listing './lib/python3.5/site-packages/eea/versions/locales/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/locales/zh_TW'...
Listing './lib/python3.5/site-packages/eea/versions/locales/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eea/versions/profiles'...
Listing './lib/python3.5/site-packages/eea/versions/profiles/default'...
Listing './lib/python3.5/site-packages/eea/versions/profiles/upgrades'...
Listing './lib/python3.5/site-packages/eea/versions/profiles/upgrades/to_90'...
Listing './lib/python3.5/site-packages/eea/versions/skins'...
Listing './lib/python3.5/site-packages/eea/versions/skins/versions_templates'...
Compiling './lib/python3.5/site-packages/eea/versions/skins/versions_templates/ds_resolveuid.py'...
***   File "./lib/python3.5/site-packages/eea/versions/skins/versions_templates/ds_resolveuid.py", line 21
    raise Unauthorized, context
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eea/versions/tests'...
Listing './lib/python3.5/site-packages/eea/versions/tests/sample'...
Listing './lib/python3.5/site-packages/eea/versions/tests/sample/profiles'...
Listing './lib/python3.5/site-packages/eea/versions/tests/sample/profiles/default'...
Listing './lib/python3.5/site-packages/eea/versions/tests/sample/profiles/default/types'...
Listing './lib/python3.5/site-packages/eea/versions/upgrades'...
Compiling './lib/python3.5/site-packages/eea/versions/versions.py'...
***   File "./lib/python3.5/site-packages/eea/versions/versions.py", line 425
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eea.versions-10.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
